--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ exemplos_html/*
 
 PDF/*
 
-
+logs/*
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,macos,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,macos,visualstudiocode
